# workshops-data-glance-through-docker

./: .gitignore  Makefile  README.md  pyproject.toml  workshop.sh
components/bash/: printer.sh  utilities.sh  workshop.sh
components/python/: __meta__.py  app.py
components/python/src/config/: read.py
components/python/src/config/app/: internal.json
components/python/src/demo/: general.py  report.py
components/python/src/models/: application.py
components/python/src/utils/: classesutil.py  constants.py  exceptions.py  generals.py  parameters.py
components/spark/: spark-job.py
data/maps/: metropolitan_area_cities.parquet  metropolitan_area_cities_roads.parquet
data/output/files/: 5157f7ec-dbd0-11ec-9f1c-eb3d64bf7766.parquet  6bc6e85e-dbd0-11ec-9f1c-eb3d64bf7766.parquet  85fd030c-dbd0-11ec-9f1c-eb3d64bf7766.parquet
data/parametric/: gas_consumption.json
data/parametric/templates/: template.html
data/vehicles/car/BBB999/: recovery.01-Mar-2022-1533.gpx  recovery.25-May-2022-0907.gpx
data/vehicles/motorcycle/AAA_22B/: recovery.05-Mar-2022.1025.gpx
docker/: Dockerfile  entrypoint.sh  jupyter_notebook_config.py  requirements.txt  spark-defaults.conf
notebooks/: gps-data-processing.ipynb
results/parquet/compressed/: .part-00000-a7b1e6d6-343c-47bc-8fe9-2ba3726209c0-c000.snappy.parquet.crc  part-00000-a7b1e6d6-343c-47bc-8fe9-2ba3726209c0-c000.snappy.parquet
results/parquet/consolidated/: .part-00000-f3d7d2de-9ce0-4e51-b6aa-d3a49d986a2d-c000.snappy.parquet.crc  part-00000-f3d7d2de-9ce0-4e51-b6aa-d3a49d986a2d-c000.snappy.parquet
(+4 files in other folders)
