
[tool.poetry]
name = "workshops-data-glance-through-docker"
version = "0.1.0"
description = "Workshops to enlight the data proccessing of GPS tracking data"
authors = ["Daniel Restrepo Hincapie"]
license = "file:LICENSE"

[tool.poetry.dependencies]
python = "3.9.12"
pyspark = "3.2.1"
findspark = "^2.0.1"
matplotlib = "3.2.2"
seaborn = "^0.11.2"
pandas = "^1.4.2"
gpxpy = "^1.5.0"
geopandas = "^0.10.2"
pyarrow = "^8.0.0"
flake8 = "4.0.1"
pyproject-flake8 = "^0.0.1a4"
pylint = "2.12.2"
mypy = "0.950"
types-requests = "2.27.25"
types-setuptools = "^57.4.14"
pdfkit = "^1.0.0"
jinja2 = "^3.1.2"
Pillow = "^9.1.1"
plotly = "^5.8.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
